--- a/index.html
+++ b/index.html
@@ -175,6 +175,11 @@
 				<h2 class="heading--bottom-left">VISION DESIGN. PHOTOGRAPHY PRODUCT.</h2>                    
 			</article>
 		</section>
+		
+		<article class="page-width feature-container--margin-top">
+            <h1>青犀<span>[Cyan rhino]</span></h1>        
+			<h2 class="heading--bottom-left">VISION DESIGN. PHOTOGRAPHY PRODUCT.</h2>                    
+		</article>
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
