--- a/home.html
+++ b/home.html
@@ -61,87 +61,92 @@
 		}
 		@media only screen and (min-width:826px) and (max-width:1099px){
 			.page-width{width:820px!important}
-			.home-induce{
-				background-image: url(img/home-820.png);
+			.home-banner{
+				background-image: url(img/home-banner-820.png);
 				background-image: -webkit-image-set(
-				  url(img/home-820.png) 1x,
-				  url(img/home-820 2x.png) 2x
+				  url(img/home-banner-820.png) 1x,
+				  url(img/home-banner-820 2x.png) 2x
 				);
 				background-image: image-set(
-				  url(img/home-820.png) 1x,
-				  url(img/home-820 2x.png) 2x
+				  url(img/home-banner-820.png) 1x,
+				  url(img/home-banner-820 2x.png) 2x
 				);
 				background-repeat:no-repeat;
-				width:276px;
-				height:219px;
+				width:820px;
+				height:312px;
+				margin:auto;
 			}
 		}
 		@media only screen and (min-width:1100px) and (max-width:1374px){
 			.page-width{width:1095px!important}
-			.home-induce{
-				background-image: url(img/home-1095.png);
+			.home-banner{
+				background-image: url(img/home-banner-1095.png);
 				background-image: -webkit-image-set(
-				  url(img/home-1095.png) 1x,
-				  url(img/home-1095 2x.png) 2x
+				  url(img/home-banner-1095.png) 1x,
+				  url(img/home-banner-1095 2x.png) 2x
 				);
 				background-image: image-set(
-				  url(img/home-1095.png) 1x,
-				  url(img/home-1095 2x.png) 2x
+				  url(img/home-banner-1095.png) 1x,
+				  url(img/home-banner-1095 2x.png) 2x
 				);
 				background-repeat:no-repeat;
-				width:276px;
-				height:219px;
+				width:1095px;
+				height:417px;
+				margin:auto;
 			}
 		}
 		@media only screen and (min-width:1375px) and (max-width:1649px){
 			.page-width{width:1370px!important}
-			.home-induce{
-				background-image: url(img/home-1370.png);
+			.home-banner{
+				background-image: url(img/home-banner-1370.png);
 				background-image: -webkit-image-set(
-				  url(img/home-1370.png) 1x,
-				  url(img/home-1370 2x.png) 2x
+				  url(img/home-banner-1370.png) 1x,
+				  url(img/home-banner-1370 2x.png) 2x
 				);
 				background-image: image-set(
-				  url(img/home-1370.png) 1x,
-				  url(img/home-1370 2x.png) 2x
+				  url(img/home-banner-1370.png) 1x,
+				  url(img/home-banner-1370 2x.png) 2x
 				);
 				background-repeat:no-repeat;
-				width:346px;
-				height:272px;
+				width:1370px;
+				height:521px;
+				margin:auto;
 			}
 		}
 		@media only screen and (min-width:1650px) and (max-width:1924px){
 			.page-width{width:1645px!important}
-			.home-induce{
-				background-image: url(img/home-1645.png);
+			.home-banner{
+				background-image: url(img/home-banner-1645.png);
 				background-image: -webkit-image-set(
-				  url(img/home-1645.png) 1x,
-				  url(img/home-1645 2x.png) 2x
+				  url(img/home-banner-1645.png) 1x,
+				  url(img/home-banner-1645 2x.png) 2x
 				);
 				background-image: image-set(
-				  url(img/home-1645.png) 1x,
-				  url(img/home-1645 2x.png) 2x
+				  url(img/home-banner-1645.png) 1x,
+				  url(img/home-banner-1645 2x.png) 2x
 				);
 				background-repeat:no-repeat;
-				width:414px;
-				height:328px;
+				width:1645px;
+				height:626px;
+				margin:auto;
 			}
 		}
 		@media only screen and (min-width:1925px){
 			.page-width{width:1645px!important}
-			.home-induce{
-				background-image: url(img/home-1645.png);
+			.home-banner{
+				background-image: url(img/home-banner-1645.png);
 				background-image: -webkit-image-set(
-				  url(img/home-1645.png) 1x,
-				  url(img/home-1645 2x.png) 2x
+				  url(img/home-banner-1645.png) 1x,
+				  url(img/home-banner-1645 2x.png) 2x
 				);
 				background-image: image-set(
-				  url(img/home-1645.png) 1x,
-				  url(img/home-1645 2x.png) 2x
+				  url(img/home-banner-1645.png) 1x,
+				  url(img/home-banner-1645 2x.png) 2x
 				);
 				background-repeat:no-repeat;
-				width:414px;
-				height:328px;
+				width:1645px;
+				height:626px;
+				margin:auto;
 			}
 		}
 		@font-face {
@@ -198,81 +203,88 @@
 			100% {opacity:0;}
 		}
 		</style>
-		<style>
-		.overlay{
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height:100%;
-			z-index:999;
-			cursor:pointer;
+		<style type="text/css">
+		.free-wall {
+			margin: 15px auto;
 		}
-		.primary-bg {
-			background-color: #5dc3df;		
-		}
-		.logo{
-			margin:0 auto;
-			padding-top:25px;
-		}
-		.feature-module {
-			overflow: hidden;
-			margin:0 auto;
-			padding-top:322px;
-		}
+		div.cell{background:pink;}
 		</style>
     </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+	<body>
+		<!--[if lt IE 7]>
+			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+			<![endif]-->
 			<div class="main">
-				<section class="overlay primary-bg">
-					<div class="logo page-width">
-						<object type="application/x-shockwave-flash" 
-						data="img/logo.swf" wmode="transparent"
-						width="76" height="50">
-						<param name="movie" value="img/logo.swf" />
-						<param name="wmode" value="transparent" />
-						<param name="quality" value="high"/>
-						<embed name="Sample" value="img/logo.swf"></embed>
-						</object>
-					</div>
-					<article class="page-width feature-module">
-						<div class="home-induce"></div>
-						<!-- <img src="img/home-1645.png" alt="" srcset="img/home-1645.png 1x, img/home-1645 2x.png 2x,img/home-cropped-sm.jpg 640w, img/home-cropped-lg.jpg 640w 2x" />
-						<picture alt="cyanrhino">
-						   <source src="img/home-1645 2x.png" media="min-width:1650px">
-						   <source src="img/home-1645.png" media="min-width:1650px">
-						   <source src="img/home-1645.png">
-						   <img src="img/home-1645.png" alt="cyanrhino">
-						</picture> -->
-					</article>
-				</section>
+				<div class="home-banner"></div>
+				<div id="freewall" class="free-wall page-width"></div>
+			
 			</div>
 
     
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-		<script src="js/helper.js"></script>
-        <script src="js/main.js"></script>
-		<script>
-		$(function(){
-			$('.overlay').on('click',function(){
-				window.location.href='home.html';
+			<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+			<script src="js/plugins.js"></script>
+			<script src="js/helper.js"></script>
+			<script src="js/main.js"></script>
+			<script src="js/freewall.js" type="text/javascript" charset="utf-8"></script>
+
+			<script type="text/javascript">
+			var temp = "<div class='cell' style='width:{width}px; height: {height}px; background-image: url(i/photo/{index}.jpg)'></div>";
+			//var temp = "<div class='cell' style='width:{width}px;'><img src='i/photo/{index}.jpg' width='100%'></div>";
+			var w = 1, html = '', limitItem = 49;
+			for (var i = 0; i < limitItem; ++i) {
+				w = 200 +  200 * Math.random() << 0;
+				html += temp.replace(/\{height\}/g, 200).replace(/\{width\}/g, w).replace("{index}", i + 1);
+			}
+			$("#freewall").html(html);
+			
+			var wall = new freewall("#freewall");
+			wall.reset({
+				selector: '.cell',
+				animate: true,
+				cellW: 20,
+				//cellW:'auto',
+				gutterX:5,
+				gutterY:5,
+				// cellW: function(width) {
+// 					var cellWidth = width / 4;
+// 					return cellWidth - 5;
+// 				},
+				cellH: 200,
+				//fixSize:false,
+				draggable:true,
+				onResize: function() {
+					wall.fitWidth();
+					//wall.fitHeight($(window).height() - 170);
+				}
 			});
-		});
-		</script>
+			wall.fitWidth();
+			
+			// var images = wall.container.find('.cell');
+// 			var length = images.length;
+// 			images.css({visibility: 'hidden'});
+// 			images.find('img').load(function() {
+// 				-- length;
+// 				if (!length) {
+// 					setTimeout(function() {
+// 						images.css({visibility: 'visible'});
+// 						wall.fitWidth();
+// 					}, 505);
+// 				}
+// 			});
+						
+			$(window).trigger("resize");
+	
+			</script>
+	  
+			<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-		<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			ga('create', 'UA-10224456-13', 'cyanrhino.com');
+			ga('send', 'pageview');
 
-		ga('create', 'UA-10224456-13', 'cyanrhino.com');
-		ga('send', 'pageview');
-
-		</script>
-    </body>
+			</script>
+		</body>
 </html>
