--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 		<!--[if lt IE 9]>
-			<script src="js/css3-mediaqueries.js" type="text/javascript" charset="utf-8"></script>
+			<script src="js/vendor/css3-mediaqueries.js" type="text/javascript" charset="utf-8"></script>
 		<![endif]-->
 		<style>
 		*,html,body,div,p,span,label,input,textarea,select,a,td,th,i,strong,em{
@@ -168,24 +168,24 @@
 		}
 		@font-face {
 			font-family: 'Din-LightAlternate';
-			src: url('css/din-lightalternate.eot');
-			src: url('css/din-lightalternate.eot?#iefix') format('embedded-opentype'),
-			url('css/DIN_LightAlternate.woff') format('woff'),
-			url('css/din-lightalternate.ttf') format('truetype'),
+			src: url('fonts/din-lightalternate.eot');
+			src: url('fonts/din-lightalternate.eot?#iefix') format('embedded-opentype'),
+			url('fonts/DIN_LightAlternate.woff') format('woff'),
+			url('fonts/din-lightalternate.ttf') format('truetype'),
 			url('cssDIN_LightAlternate.svg#DIN_LightAlternate') format('svg'),
-			url('css/DIN-LightAlternate.otf') format('otf');
+			url('fonts/DIN-LightAlternate.otf') format('otf');
 			font-weight: normal;
 			font-style: normal;
 		}
 		
 		@font-face {
 			font-family: 'Din-Light';
-			src: url('css/din-light.eot');
-			src: url('css/din-light.eot?#iefix') format('embedded-opentype'),
-			url('css/DIN-Light.woff') format('woff'),
-			url('css/din-light.ttf') format('truetype'),
-			url('css/DIN-Light.svg#DINLight') format('svg'),
-			url('css/DIN-Light.otf') format('otf');
+			src: url('fonts/din-light.eot');
+			src: url('fonts/din-light.eot?#iefix') format('embedded-opentype'),
+			url('fonts/DIN-Light.woff') format('woff'),
+			url('fonts/din-light.ttf') format('truetype'),
+			url('fonts/DIN-Light.svg#DINLight') format('svg'),
+			url('fonts/DIN-Light.otf') format('otf');
 			font-weight: normal;
 			font-style: normal;
 		}
@@ -195,7 +195,7 @@
 			src: url('deibi-webfont.eot');
 			src: url('deibi-webfont.eot?#iefix') format('embedded-opentype'),
 			url('deibi-webfont.woff') format('woff'),
-			url('css/STXIHEI.ttf') format('truetype'),
+			url('fonts/STXIHEI.ttf') format('truetype'),
 			url('deibi-webfont.svg#DeibiRegular') format('svg');
 			font-weight: normal;
 			font-style: normal;
