--- a/public/home.html
+++ b/public/home.html
@@ -61,180 +61,7 @@
 			border:1px solid #636363;
 			background-color:#929292;
 		}
-		@media only screen and (max-width:825px){
-			.page-width{width:320px!important;margin:auto;}
-			.module-overlay-cover,
-			.home-banner{
-				width:320px;
-				height:120px;
-				margin:auto;
-			}
-			.home-banner{
-				background-image: url(img/home-banner-820.png);
-				background-image: -webkit-image-set(
-				  url(img/home-banner-820.png) 1x,
-				  url(img/home-banner-820 2x.png) 2x
-				);
-				background-image: image-set(
-				  url(img/home-banner-820.png) 1x,
-				  url(img/home-banner-820 2x.png) 2x
-				);
-				background-repeat:no-repeat;
-				background-size:100% auto;
-			}
-		}
-		@media only screen and (min-width:826px) and (max-width:1099px){
-			.page-width{width:820px!important;margin:auto;}
-			.module-overlay-cover,
-			.home-banner{
-				width:820px;
-				height:312px;
-				margin:auto;
-			}
-			.home-banner{
-				background-image: url(img/home-banner-820.png);
-				background-image: -webkit-image-set(
-				  url(img/home-banner-820.png) 1x,
-				  url(img/home-banner-820 2x.png) 2x
-				);
-				background-image: image-set(
-				  url(img/home-banner-820.png) 1x,
-				  url(img/home-banner-820 2x.png) 2x
-				);
-				background-repeat:no-repeat;
-				width:820px;
-				height:312px;
-				margin:auto;
-			}
-			.heading--feature {
-				width: 50% !important;
-				margin-top:80px !important;
-			}
-			.heading--feature li{
-				font-size: 50px !important;
-				line-height: 1.14em;
-			}
-		}
-		@media only screen and (min-width:1100px) and (max-width:1374px){
-			.page-width{width:1095px!important;margin:auto;}
-			.module-overlay-cover,
-			.home-banner{
-				width:1095px;
-				height:417px;
-				margin:auto;
-			}
-			.home-banner{
-				background-image: url(img/home-banner-1095.png);
-				background-image: -webkit-image-set(
-				  url(img/home-banner-1095.png) 1x,
-				  url(img/home-banner-1095 2x.png) 2x
-				);
-				background-image: image-set(
-				  url(img/home-banner-1095.png) 1x,
-				  url(img/home-banner-1095 2x.png) 2x
-				);
-				background-repeat:no-repeat;
-				width:1095px;
-				height:417px;
-				margin:auto;
-			}
-		}
-		@media only screen and (min-width:1375px) and (max-width:1649px){
-			.page-width{width:1370px!important;margin:auto;}
-			.module-overlay-cover,
-			.home-banner{
-				width:1370px;
-				height:521px;
-				margin:auto;
-			}
-			.home-banner{
-				background-image: url(img/home-banner-1370.png);
-				background-image: -webkit-image-set(
-				  url(img/home-banner-1370.png) 1x,
-				  url(img/home-banner-1370 2x.png) 2x
-				);
-				background-image: image-set(
-				  url(img/home-banner-1370.png) 1x,
-				  url(img/home-banner-1370 2x.png) 2x
-				);
-				background-repeat:no-repeat;
-				width:1370px;
-				height:521px;
-				margin:auto;
-			}
-			.heading--feature {
-				width: 30% !important;
-				margin-top:230px !important;
-			}
-			.heading--feature li{
-				font-size: 60px !important;
-				line-height: 1.14em;
-			}
-		}
-		@media only screen and (min-width:1650px) and (max-width:1924px){
-			.page-width{width:1645px!important;margin:auto;}
-			.module-overlay-cover,
-			.home-banner{
-				width:1645px;
-				height:626px;
-				margin:auto;
-			}
-			.home-banner{
-				background-image: url(img/home-banner-1645.png);
-				background-image: -webkit-image-set(
-				  url(img/home-banner-1645.png) 1x,
-				  url(img/home-banner-1645 2x.png) 2x
-				);
-				background-image: image-set(
-				  url(img/home-banner-1645.png) 1x,
-				  url(img/home-banner-1645 2x.png) 2x
-				);
-				background-repeat:no-repeat;
-				width:1645px;
-				height:626px;
-				margin:auto;
-			}
-			.heading--feature {
-				width: 30% !important;
-				margin-top:330px !important;
-			}
-			.heading--feature li{
-				font-size: 60px !important;
-				line-height: 1.14em;
-			}
-		}
-		@media only screen and (min-width:1925px){
-			.page-width{width:1645px!important;margin:auto;}
-			.module-overlay-cover,
-			.home-banner{
-				width:1645px;
-				height:626px;
-				margin:auto;
-			}
-			.home-banner{
-				background-image: url(img/home-banner-1645.png);
-				background-image: -webkit-image-set(
-				  url(img/home-banner-1645.png) 1x,
-				  url(img/home-banner-1645 2x.png) 2x
-				);
-				background-image: image-set(
-				  url(img/home-banner-1645.png) 1x,
-				  url(img/home-banner-1645 2x.png) 2x
-				);
-				background-repeat:no-repeat;
-				width:1645px;
-				height:626px;
-				margin:auto;
-			}
-			.heading--feature {
-				width: 30% !important;
-				margin-top:330px !important;
-			}
-			.heading--feature li{
-				font-size: 60px !important;
-				line-height: 1.14em;
-			}
-		}
+		
 		@font-face {
 			font-family: 'Din-LightAlternate';
 			src: url('fonts/din-lightalternate.eot');
@@ -544,7 +371,7 @@
 		}
 		</style>
 		<style>
-		.box {
+		/*.box {
 			display:inline-block;
 			float:left;
 			opacity: 1;
@@ -595,6 +422,275 @@
 			-webkit-transition:all .5s;
 			-moz-transition:all .5s;
 			transition:all .5s;
+		}*/
+		</style>
+		
+		<style>
+		/* ---- .element-item ---- */
+		.item {
+		  float: left;
+		  width: 33.3333333333%;
+		  height: 200px;
+		  margin: 2px;
+		  background: #888;
+		}
+
+		.big{
+		  width:65.933333333333%;
+		}
+
+		.mid{
+		  width:49.63333333333%;
+		}
+
+		.full{
+		  width:99.6%;
+		}
+
+		.item .number {
+		  font-size: 50px;
+		  text-align: center;
+		  margin: 0;
+		}
+
+		.item[data-color="red"] { background: red; }
+		.item[data-color="blue"] { background: blue; }
+		.item[data-color="yellow"] { background: yellow; }
+		</style>
+		<style>
+		@media only screen and (max-width:825px){
+			.page-width{width:320px!important;margin:auto;}
+			.module-overlay-cover,
+			.home-banner{
+				width:320px;
+				height:120px;
+				margin:auto;
+			}
+			.home-banner{
+				background-image: url(img/home-banner-820.png);
+				background-image: -webkit-image-set(
+				  url(img/home-banner-820.png) 1x,
+				  url(img/home-banner-820 2x.png) 2x
+				);
+				background-image: image-set(
+				  url(img/home-banner-820.png) 1x,
+				  url(img/home-banner-820 2x.png) 2x
+				);
+				background-repeat:no-repeat;
+				background-size:100% auto;
+			}
+			.item {
+			  width: 104px;
+			}
+
+			.big{
+			  width:208px;
+			}
+
+			.mid{
+			  width:156px;
+			}
+
+			.full{
+			  width:316px;
+			}
+		}
+		@media only screen and (min-width:826px) and (max-width:1099px){
+			.page-width{width:820px!important;margin:auto;}
+			.module-overlay-cover,
+			.home-banner{
+				width:820px;
+				height:312px;
+				margin:auto;
+			}
+			.home-banner{
+				background-image: url(img/home-banner-820.png);
+				background-image: -webkit-image-set(
+				  url(img/home-banner-820.png) 1x,
+				  url(img/home-banner-820 2x.png) 2x
+				);
+				background-image: image-set(
+				  url(img/home-banner-820.png) 1x,
+				  url(img/home-banner-820 2x.png) 2x
+				);
+				background-repeat:no-repeat;
+				width:820px;
+				height:312px;
+				margin:auto;
+			}
+			.heading--feature {
+				width: 50% !important;
+				margin-top:80px !important;
+			}
+			.heading--feature li{
+				font-size: 50px !important;
+				line-height: 1.14em;
+			}
+			.item {
+			  width: 33.3333333333%;
+			}
+
+			.big{
+			  width:65.69%;
+			}
+
+			.mid{
+			  width:49.514%;
+			}
+
+			.full{
+			  width:99.6%;
+			}
+		}
+		@media only screen and (min-width:1100px) and (max-width:1374px){
+			.page-width{width:1095px!important;margin:auto;}
+			.module-overlay-cover,
+			.home-banner{
+				width:1095px;
+				height:417px;
+				margin:auto;
+			}
+			.home-banner{
+				background-image: url(img/home-banner-1095.png);
+				background-image: -webkit-image-set(
+				  url(img/home-banner-1095.png) 1x,
+				  url(img/home-banner-1095 2x.png) 2x
+				);
+				background-image: image-set(
+				  url(img/home-banner-1095.png) 1x,
+				  url(img/home-banner-1095 2x.png) 2x
+				);
+				background-repeat:no-repeat;
+				width:1095px;
+				height:417px;
+				margin:auto;
+			}
+		}
+		@media only screen and (min-width:1375px) and (max-width:1649px){
+			.page-width{width:1370px!important;margin:auto;}
+			.module-overlay-cover,
+			.home-banner{
+				width:1370px;
+				height:521px;
+				margin:auto;
+			}
+			.home-banner{
+				background-image: url(img/home-banner-1370.png);
+				background-image: -webkit-image-set(
+				  url(img/home-banner-1370.png) 1x,
+				  url(img/home-banner-1370 2x.png) 2x
+				);
+				background-image: image-set(
+				  url(img/home-banner-1370.png) 1x,
+				  url(img/home-banner-1370 2x.png) 2x
+				);
+				background-repeat:no-repeat;
+				width:1370px;
+				height:521px;
+				margin:auto;
+			}
+			.heading--feature {
+				width: 30% !important;
+				margin-top:230px !important;
+			}
+			.heading--feature li{
+				font-size: 60px !important;
+				line-height: 1.14em;
+			}
+			.item {
+			  width: 33.3333333333%;
+			}
+
+			.big{
+			  width:66%;
+			}
+
+			.mid{
+			  width:49.7%;
+			}
+
+			.full{
+			  width:99.6%;
+			}
+		}
+		@media only screen and (min-width:1650px) and (max-width:1924px){
+			.page-width{width:1645px!important;margin:auto;}
+			.module-overlay-cover,
+			.home-banner{
+				width:1645px;
+				height:626px;
+				margin:auto;
+			}
+			.home-banner{
+				background-image: url(img/home-banner-1645.png);
+				background-image: -webkit-image-set(
+				  url(img/home-banner-1645.png) 1x,
+				  url(img/home-banner-1645 2x.png) 2x
+				);
+				background-image: image-set(
+				  url(img/home-banner-1645.png) 1x,
+				  url(img/home-banner-1645 2x.png) 2x
+				);
+				background-repeat:no-repeat;
+				width:1645px;
+				height:626px;
+				margin:auto;
+			}
+			.heading--feature {
+				width: 30% !important;
+				margin-top:330px !important;
+			}
+			.heading--feature li{
+				font-size: 60px !important;
+				line-height: 1.14em;
+			}
+			.item {
+			  width: 33.3333333333%;
+			}
+
+			.big{
+			  width:66.18%;
+			}
+
+			.mid{
+			  width:49.757%;
+			}
+
+			.full{
+			  width:99.8%;
+			}
+		}
+		@media only screen and (min-width:1925px){
+			.page-width{width:1645px!important;margin:auto;}
+			.module-overlay-cover,
+			.home-banner{
+				width:1645px;
+				height:626px;
+				margin:auto;
+			}
+			.home-banner{
+				background-image: url(img/home-banner-1645.png);
+				background-image: -webkit-image-set(
+				  url(img/home-banner-1645.png) 1x,
+				  url(img/home-banner-1645 2x.png) 2x
+				);
+				background-image: image-set(
+				  url(img/home-banner-1645.png) 1x,
+				  url(img/home-banner-1645 2x.png) 2x
+				);
+				background-repeat:no-repeat;
+				width:1645px;
+				height:626px;
+				margin:auto;
+			}
+			.heading--feature {
+				width: 30% !important;
+				margin-top:330px !important;
+			}
+			.heading--feature li{
+				font-size: 60px !important;
+				line-height: 1.14em;
+			}
 		}
 		</style>
     </head>
@@ -652,7 +748,7 @@
 			
 			<div id="freewall" class="free-wall page-width"></div>
 			
-			<div id="wall" class="free-wall page-width">
+			<!-- <div id="wall" class="free-wall page-width">
 				<div class="row">
 					<div class="box one">
 						<div class="figure"></div>
@@ -672,7 +768,38 @@
 				<div class="row">
 					<div class="box full">3</div>
 				</div>
+			</div> -->
+			
+			<div class="page-width" id="tiles">
+				<div class="item big" data-color="yellow">
+					<p class="number">3</p>
+				</div>
+				<div class="item big" data-color="blue">
+					<p class="number">2</p>
+				</div>
+				<div class="item" data-color="blue">
+					<p class="number">1</p>
+				</div>
+				<div class="item mid" data-color="yellow">
+					<p class="number">1</p>
+				</div>
+				<div class="item full" data-color="yellow">
+					<p class="number">2</p>
+				</div>
+				<div class="item big" data-color="blue">
+					<p class="number">3</p>
+				</div>
+				<div class="item" data-color="yellow">
+					<p class="number">2</p>
+				</div>
+				<div class="item" data-color="red">
+					<p class="number">2</p>
+				</div>
+				<div class="item mid" data-color="red">
+					<p class="number">3</p>
+				</div>
 			</div>
+			<div class="clearfix"></div>
 			
 			<nav class='pagination page-width text-right' role='toolbar'>
 				<ul>
@@ -706,6 +833,8 @@
 		<script src="js/helper.js"></script>
 		<script src="js/main.js"></script>
 		<script src="js/vendor/freewall.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/vendor/isotope.pkgd.min.js" type="text/javascript" charset="utf-8"></script>
+
 
 			<script type="text/javascript">
 			var temp = "<div class='cell' style='width:{width}px; height: {height}px; background-image: url(i/photo/{index}.jpg)'></div>";
@@ -781,6 +910,22 @@
 				}).on('mouseout',function(){
 					$(this).parent().find('.figure-caption').css('top',200);
 				});
+			});
+			</script>
+			
+			<script>
+			$(function(){
+				var $container = $('#tiles').isotope({
+				    itemSelector: '.item',
+				    layoutMode: 'fitRows',
+				    resizesContainer : false,
+				    getSortData: {
+				      color: '[data-color]',
+				      number: '.number parseInt'
+				    },
+				    // sort by color then number
+				    sortBy: [ 'color', 'number' ]
+				  });
 			});
 			</script>
 			
