fix bg size bug

--- a/public/home.html
+++ b/public/home.html
@@ -436,7 +436,8 @@
 		  height: 362px;	
 		  margin: 2px; 
 		  background: #888;
-		  background-size:contain;
+		  background-size:cover;
+		  background-repeat:no-repeat;
 		}
 
 		.big{
