--- a/public/home.html
+++ b/public/home.html
@@ -246,7 +246,6 @@
 			left: 0;
 			z-index: 2;
 			width: 100%;
-			height: 100%;
 		 }
 		 .module-overlay-cover{
  			opacity:.65;
@@ -431,13 +430,26 @@
 			padding-top:10px;
 		}
 		.item {
-		  float: left;
-		  width: 32.94%;
-		  height: 362px;	
-		  margin: 2px; 
-		  background: #888;
-		  background-size:cover;
-		  background-repeat:no-repeat;
+			float: left;
+			width: 32.94%;
+			height: 362px;	
+			margin: 2px; 
+			background: #888;
+			background-size:cover;
+			background-repeat:no-repeat;
+			position:relative;
+			
+			-webkit-perspective: 800px;
+			-moz-perspective: 800px;
+			-o-perspective: 800px;
+			-ms-perspective: 800px;
+			perspective: 800px;
+
+			-webkit-transition: all 0.4s ease-in-out;
+			-moz-transition: all 0.4s ease-in-out;
+			-o-transition: all 0.4s ease-in-out;
+			-ms-transition: all 0.4s ease-in-out;
+			transition: all 0.4s ease-in-out;
 		}
 
 		.big{
@@ -452,15 +464,202 @@
 		  width:99.6%;
 		}
 
-		.item .number {
-		  font-size: 50px;
-		  text-align: center;
-		  margin: 0;
+		
+		.item .info .number {
+			font-size: 50px;
+			text-align: center;
+			margin: 0;
+			padding:0;
+			position:absolute;
+			width:100%;
+			height:100%;
+			color:white;
 		}
 
-		/*.item[data-color="red"] { background: red; }
-		.item[data-color="blue"] { background: blue; }
-		.item[data-color="yellow"] { background: yellow; }*/
+		/*.ch-info{
+			position: absolute;
+			width: 100%;
+			height: 100%;
+
+			-webkit-transition: all 0.4s ease-in-out;
+			-moz-transition: all 0.4s ease-in-out;
+			-o-transition: all 0.4s ease-in-out;
+			-ms-transition: all 0.4s ease-in-out;
+			transition: all 0.4s ease-in-out;
+		
+			-webkit-transform-style: preserve-3d;
+			-moz-transform-style: preserve-3d;
+			-o-transform-style: preserve-3d;
+			-ms-transform-style: preserve-3d;
+			transform-style: preserve-3d;
+
+		}
+
+		.ch-info > div {
+			display: block;
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			background-position: center center;
+
+			-webkit-backface-visibility: hidden;
+			-moz-backface-visibility: hidden;
+			-o-backface-visibility: hidden;
+			-ms-backface-visibility: hidden;
+			backface-visibility: hidden;
+		}
+
+		.ch-info .ch-info-back {
+			-webkit-transform: rotate3d(0,1,0,180deg);
+			-moz-transform: rotate3d(0,1,0,180deg);
+			-o-transform: rotate3d(0,1,0,180deg);
+			-ms-transform: rotate3d(0,1,0,180deg);
+			transform: rotate3d(0,1,0,180deg);
+	
+			background: #000;
+			opacity:0.8;
+		}
+
+		.ch-info h3 {
+			color: #fff;
+			text-transform: uppercase;
+			letter-spacing: 2px;
+			font-size: 14px;
+			margin: 0 15px;
+			padding: 40px 0 0 0;
+			height: 90px;
+			font-family: 'Open Sans', Arial, sans-serif;
+			text-shadow: 
+				0 0 1px #fff, 
+				0 1px 2px rgba(0,0,0,0.3);
+		}
+
+		.ch-info p {
+			color: #fff;
+			padding: 10px 5px;
+			font-style: italic;
+			margin: 0 30px;
+			font-size: 12px;
+			border-top: 1px solid rgba(255,255,255,0.5);
+		}
+
+		.ch-info p a {
+			display: block;
+			color: #fff;
+			color: rgba(255,255,255,0.7);
+			font-style: normal;
+			font-weight: 700;
+			text-transform: uppercase;
+			font-size: 9px;
+			letter-spacing: 1px;
+			padding-top: 4px;
+			font-family: 'Open Sans', Arial, sans-serif;
+		}
+
+		.ch-info p a:hover {
+			color: #fff222;
+			color: rgba(255,242,34, 0.8);
+		}
+
+		.item:hover .ch-info {
+			-webkit-transform: rotate3d(0,1,0,-180deg);
+			-moz-transform: rotate3d(0,1,0,-180deg);
+			-o-transform: rotate3d(0,1,0,-180deg);
+			-ms-transform: rotate3d(0,1,0,-180deg);
+			transform: rotate3d(0,1,0,-180deg);
+		}
+		*/
+		.ch-info {
+			position: absolute;
+			background: #000;
+			width: 100%;
+			height: 100%;
+			opacity: 0;
+	
+			-webkit-transition: all 0.4s ease-in-out;
+			-moz-transition: all 0.4s ease-in-out;
+			-o-transition: all 0.4s ease-in-out;
+			-ms-transition: all 0.4s ease-in-out;
+			transition: all 0.4s ease-in-out;
+	
+			-webkit-transform: scale(0);
+			-moz-transform: scale(0);
+			-o-transform: scale(0);
+			-ms-transform: scale(0);
+			transform: scale(0);
+	
+			-webkit-backface-visibility: hidden;
+
+		}
+
+		.ch-info h3 {
+			color: #fff;
+			text-transform: uppercase;
+			letter-spacing: 2px;
+			font-size: 22px;
+			margin: 0 30px;
+			padding: 45px 0 0 0;
+			height: 140px;
+			font-family: 'Open Sans', Arial, sans-serif;
+			text-shadow: 
+				0 0 1px #fff, 
+				0 1px 2px rgba(0,0,0,0.3);
+		}
+
+		.ch-info p {
+			color: #fff;
+			padding: 10px 5px;
+			font-style: italic;
+			margin: 0 30px;
+			font-size: 12px;
+			border-top: 1px solid rgba(255,255,255,0.5);
+			opacity: 0;
+			-webkit-transition: all 1s ease-in-out 0.4s;
+			-moz-transition: all 1s ease-in-out 0.4s;
+			-o-transition: all 1s ease-in-out 0.4s;
+			-ms-transition: all 1s ease-in-out 0.4s;
+			transition: all 1s ease-in-out 0.4s;
+		}
+
+		.ch-info p a {
+			display: block;
+			color: #fff;
+			color: rgba(255,255,255,0.7);
+			font-style: normal;
+			font-weight: 700;
+			text-transform: uppercase;
+			font-size: 9px;
+			letter-spacing: 1px;
+			padding-top: 4px;
+			font-family: 'Open Sans', Arial, sans-serif;
+		}
+
+		.ch-info p a:hover {
+			color: #fff222;
+			color: rgba(255,242,34, 0.8);
+		}
+
+		.item:hover .ch-info {
+			-webkit-transform: scale(1);
+			-moz-transform: scale(1);
+			-o-transform: scale(1);
+			-ms-transform: scale(1);
+			transform: scale(1);
+			opacity: 0.8;
+			/*-webkit-transform: rotate3d(0,1,0,-180deg);
+			-moz-transform: rotate3d(0,1,0,-180deg);
+			-o-transform: rotate3d(0,1,0,-180deg);
+			-ms-transform: rotate3d(0,1,0,-180deg);
+			transform: rotate3d(0,1,0,-180deg);*/
+		}
+
+		.item:hover .ch-info p {
+			opacity: 1;
+		}
+
+		/*.item[data-num="red"] { background: red; }
+		.item[data-num="blue"] { background: blue; }
+		.item[data-num="yellow"] { background: yellow; }*/
 		</style>
 		<style>
 		@media only screen and (max-width:825px){
@@ -791,41 +990,83 @@
 			</div> -->
 			
 			<div class="page-width" id="tiles">
-				<div class="item big" data-color="yellow" style="background-image:url(img/foto/twothird.png);">
-					<p class="number">3</p>
+				<div class="item big" data-num="1" style="background-image:url(img/foto/twothird.png);">
+					<div class="ch-info">
+						<div class="ch-info-back">
+							<h3>Salon Spaces illustrations</h3>
+							<p>by Jeremy Slagle <a href="http://drbl.in/elmi">View on Dribbble</a></p>
+						</div>
+					</div>
 				</div>
-				<div class="item big" data-color="blue" style="background-image:url(img/foto/twothird.png);">
-					<p class="number">2</p>
+				<div class="item" data-num="2" style="background-image:url(img/foto/onethird.png);">
+					<div class="ch-info">
+						<div class="ch-info-back">
+							<h3>Salon Spaces illustrations</h3>
+							<p>by Jeremy Slagle <a href="http://drbl.in/elmi">View on Dribbble</a></p>
+						</div>
+					</div>
 				</div>
-				<div class="item" data-color="blue" style="background-image:url(img/foto/onethird.png);">
-					<p class="number">1</p>
+				<div class="item" data-num="3" style="background-image:url(img/foto/onethird.png);">
+					<div class="ch-info">
+						<div class="ch-info-back">
+							<h3>Salon Spaces illustrations</h3>
+							<p>by Jeremy Slagle <a href="http://drbl.in/elmi">View on Dribbble</a></p>
+						</div>
+					</div>
 				</div>
-				<div class="item mid" data-color="yellow" style="background-image:url(img/foto/half_2.png);">
-					<p class="number">1</p>
+				<div class="item big" data-num="4" style="background-image:url(img/foto/twothird.png);">
+					<div class="ch-info">
+						<div class="ch-info-back">
+							<h3>Salon Spaces illustrations</h3>
+							<p>by Jeremy Slagle <a href="http://drbl.in/elmi">View on Dribbble</a></p>
+						</div>
+					</div>
 				</div>
-				<div class="item full" data-color="yellow" style="background-image:url(img/foto/full_1.png);">
-					<p class="number">2</p>
+				<div class="item mid" data-num="5" style="background-image:url(img/foto/half_1.png);">
+					<div class="ch-info">
+						<div class="ch-info-back">
+							<h3>Salon Spaces illustrations</h3>
+							<p>by Jeremy Slagle <a href="http://drbl.in/elmi">View on Dribbble</a></p>
+						</div>
+					</div>
 				</div>
-				<div class="item big" data-color="blue" style="background-image:url(img/foto/twothird.png);">
-					<p class="number">3</p>
+				<div class="item mid" data-num="6" style="background-image:url(img/foto/half_2.png);">
+					<div class="ch-info">
+						<div class="ch-info-back">
+							<h3>Salon Spaces illustrations</h3>
+							<p>by Jeremy Slagle <a href="http://drbl.in/elmi">View on Dribbble</a></p>
+						</div>
+					</div>
 				</div>
-				<div class="item" data-color="yellow" style="background-image:url(img/foto/onethird.png);">
-					<p class="number">2</p>
+				<div class="item full" data-num="7" style="background-image:url(img/foto/full_1.png);">
+					<div class="ch-info">
+						<div class="ch-info-back">
+							<h3>Salon Spaces illustrations</h3>
+							<p>by Jeremy Slagle <a href="http://drbl.in/elmi">View on Dribbble</a></p>
+						</div>
+					</div>
 				</div>
-				<div class="item" data-color="red" style="background-image:url(img/foto/onethird.png);">
-					<p class="number">2</p>
+				<div class="item big" data-num="8" style="background-image:url(img/foto/twothird.png);">
+					<div class="ch-info">
+						<div class="ch-info-back">
+							<h3>Salon Spaces illustrations</h3>
+							<p>by Jeremy Slagle <a href="http://drbl.in/elmi">View on Dribbble</a></p>
+						</div>
+					</div>
 				</div>
-				<div class="item mid" data-color="red" style="background-image:url(img/foto/half_1.png);">
-					<p class="number">3</p>
+				
+				<div class="item" data-num="9" style="background-image:url(img/foto/onethird.png);">
+					<div class="info"><p class="number">9</p></div>
 				</div>
-				<div class="item" data-color="yellow" style="background-image:url(img/foto/onethird.png);">
-					<p class="number">3</p>
+				
+				<div class="item" data-num="10" style="background-image:url(img/foto/onethird.png);">
+					<div class="info"><p class="number">10</p></div>
 				</div>
-				<div class="item" data-color="yellow" style="background-image:url(img/foto/onethird.png);">
-					<p class="number">3</p>
+				<div class="item" data-num="11" style="background-image:url(img/foto/onethird.png);">
+					<div class="info"><p class="number">11</p></div>
 				</div>
-				<div class="item" data-color="yellow" style="background-image:url(img/foto/onethird.png);">
-					<p class="number">3</p>
+				<div class="item" data-num="12" style="background-image:url(img/foto/onethird.png);">
+					<div class="info"><p class="number">12</p></div>
 				</div>
 			</div>
 			<div class="clearfix"></div>
@@ -951,11 +1192,11 @@
 				    layoutMode: 'fitRows',
 				    resizesContainer : false,
 				    getSortData: {
-				      color: '[data-color]',
+				      num: '[data-num] parseInt',
 				      number: '.number parseInt'
 				    },
 				    // sort by color then number
-				    sortBy: [ 'color', 'number' ]
+				    sortBy: [ 'num' ]
 				  });
 			});
 			</script>
