fix broken link

--- a/public/index.html
+++ b/public/index.html
@@ -282,7 +282,7 @@
 		<script>
 		$(function(){
 			$('.overlay').on('click',function(){
-				window.location.href='showcase.html';
+				window.location.href='home.html';
 			});
 		});
 		</script>
