--- a/public/news.html
+++ b/public/news.html
@@ -658,7 +658,7 @@
 							<a class="subnav__top-most" href="javascript:;"><span>Works</span></a>
 							<div class="subnav__div">
 								<a href="javascript:;"><span>News</span></a>
-								<a href="showcase.html"><span>Showcase</span></a>
+								<a href="home.html"><span>Showcase</span></a>
 							</div>
 						</li>
 					</ul>
