--- a/public/career.html
+++ b/public/career.html
@@ -575,7 +575,7 @@
 							<a class="subnav__top-most" href="javascript:;"><span>Works</span></a>
 							<div class="subnav__div">
 								<a href="news.html"><span>News</span></a>
-								<a href="showcase.html"><span>Showcase</span></a>
+								<a href="home.html"><span>Showcase</span></a>
 							</div>
 						</li>
 					</ul>
