fix css font path bug

--- a/public/contact.html
+++ b/public/contact.html
@@ -106,7 +106,7 @@
 			src: url('fonts/din-lightalternate.eot?#iefix') format('embedded-opentype'),
 			url('fonts/DIN_LightAlternate.woff') format('woff'),
 			url('fonts/din-lightalternate.ttf') format('truetype'),
-			url('cssDIN_LightAlternate.svg#DIN_LightAlternate') format('svg'),
+			url('fonts/DIN_LightAlternate.svg#DIN_LightAlternate') format('svg'),
 			url('fonts/DIN-LightAlternate.otf') format('otf');
 			font-weight: normal;
 			font-style: normal;
