--- a/public/home.html
+++ b/public/home.html
@@ -106,7 +106,7 @@
 			src: url('fonts/din-lightalternate.eot?#iefix') format('embedded-opentype'),
 			url('fonts/DIN_LightAlternate.woff') format('woff'),
 			url('fonts/din-lightalternate.ttf') format('truetype'),
-			url('cssDIN_LightAlternate.svg#DIN_LightAlternate') format('svg'),
+			url('fonts/DIN_LightAlternate.svg#DIN_LightAlternate') format('svg'),
 			url('fonts/DIN-LightAlternate.otf') format('otf');
 			font-weight: normal;
 			font-style: normal;
@@ -1068,7 +1068,7 @@
 				<div class="item big" data-num="1" style="background-image:url(img/foto/twothird.png);">
 					<div class="ch-info">
 						<div class="ch-info-back">
-							<a href="#">
+							<a href="detail.html">
 								<span>showcase</span>
 								<h3>da yuan</h3>
 								<p>九华大愿 <i class="fa fa-caret-right"></i></p>
@@ -1079,7 +1079,7 @@
 				<div class="item" data-num="2" style="background-image:url(img/foto/onethird.png);">
 					<div class="ch-info">
 						<div class="ch-info-back">
-							<a href="#">
+							<a href="detail.html">
 								<span>showcase</span>
 								<h3>da yuan</h3>
 								<p>九华大愿 <i class="fa fa-caret-right"></i></p>
@@ -1090,7 +1090,7 @@
 				<div class="item" data-num="3" style="background-image:url(img/foto/onethird.png);">
 					<div class="ch-info">
 						<div class="ch-info-back">
-							<a href="#">
+							<a href="detail.html">
 								<span>showcase</span>
 								<h3>da yuan</h3>
 								<p>九华大愿 <i class="fa fa-caret-right"></i></p>
@@ -1101,7 +1101,7 @@
 				<div class="item big" data-num="4" style="background-image:url(img/foto/twothird.png);">
 					<div class="ch-info">
 						<div class="ch-info-back">
-							<a href="#">
+							<a href="detail.html">
 								<span>showcase</span>
 								<h3>da yuan</h3>
 								<p>九华大愿 <i class="fa fa-caret-right"></i></p>
@@ -1112,7 +1112,7 @@
 				<div class="item mid" data-num="5" style="background-image:url(img/foto/half_1.png);">
 					<div class="ch-info">
 						<div class="ch-info-back">
-							<a href="#">
+							<a href="detail.html">
 								<span>showcase</span>
 								<h3>da yuan</h3>
 								<p>九华大愿 <i class="fa fa-caret-right"></i></p>
